2005-10-29  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Fix handling of multiple albums (David Mandelberg, closes #318044)

2005-10-21  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.1.

2005-10-20  William Jon McCann  <mccann@jhu.edu>

	* src/sj-main.c (set_drive_from_device):
	Lock the drive while SJ is running.  Fixes #319249.

	* .cvsignore: Add files.

2005-10-19  William Jon McCann  <mccann@jhu.edu>

	* src/sj-main.c (media_added_cb, media_removed_cb)
	(set_drive_from_device, set_device, device_changed_cb, main):
	* configure.in:
	Use nautilus-cd-burner 2.13 monitoring.  Fixes #317864.

2005-10-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Collect an return value when getting media type, and check for
	errors.

2005-10-11  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Protect against FileChooserButton returning a NULL path (#317999)

2005-10-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Build without libcdio (thanks William Jon McCann).

2005-10-07  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Protect against invalid iterators.

2005-10-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sound-juicer.h:
	* src/sj-main.c:
	Add --enable-debug and start using it.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/Makefile.am:
	* src/sj-metadata-cdtext.c:
	* src/sj-metadata-cdtext.h:
	Add start of CD-TEXT metadata backend.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add Funk to the genre list, to please Shaun (closes #314851).

2005-10-03  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	Use Extractor rather than Ripper (closes #315283).

2005-10-01  Runa Bhattacharjee <runa@bengalinux.org>

	* configure.in: Added "bn" (Bengali) to ALL_LINGUAS.

2005-09-19  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12.2.

2005-09-19  Ross Burton  <ross@burtonini.com>
