@@ -1,3 +1,8 @@
+2005-11-03  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	Handle G_FILENAME_ENCODING correctly, thanks Colin Leroy (#320604)
+
 2005-10-29  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-metadata-musicbrainz.c:
